--- a/src/Mis_notas-1.1/PKGBUILD
+++ b/src/Mis_notas-1.1/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mis_notas
-pkgver=1.1
+pkgver=1.0
 pkgrel=1
 pkgdesc="Aplicación de gestión de notas en terminal"
 arch=('any')
@@ -8,8 +8,8 @@ license=('MIT')
 depends=('python' 'python-rich')
 
 # Usando la URL correcta para descargar el repositorio comprimido
-source=("https://github.com/alo5s/Mis_notas/archive/refs/tags/v$pkgver.tar.gz")
-#source=("https://github.com/alo5s/Mis_notas/archive/refs/tags/v1.0.tar.gz")
+#source=("https://github.com/alo5s/Mis_notas/archive/refs/tags/v$pkgver.tar.gz")
+source=("https://github.com/alo5s/Mis_notas/archive/refs/tags/v1.0.tar.gz")
 
 # Usando SKIP para evitar la verificación de la suma de verificación mientras no tengamos el archivo
 sha256sums=('SKIP')
